--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -1,6 +1,6 @@
 <div id="shopping-click">
   <% if user_signed_in? %>
-    <h2><%= link_to icon('fas', 'shopping-cart'), cart_path %></h2>
+    <h2><%= link_to icon('fas', 'shopping-cart'), cart_path %><span class='cart-number'><%= current_user.reservations.size %></span></h2>
   <% else %>
     <h2><%= link_to icon('fas', 'utensils'), new_user_session_path %></h2>
   <% end %>
@@ -96,8 +96,28 @@
   </div>
 </div>
 <% else %>
-  <% if %>
 
+  <% if @items.length < 5 %>
+    <div class="container">
+      <div class="row">
+        <div class="col-xs-11 col-xs-offset-1 col-md">
+          <div class="search-filter1-box">
+            <h2 style="margin-top: 60px;"> NEW FOOD </h2>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="container">
+      <div class="row">
+        <div class="col-xs-11 col-xs-offset-1 col-md">
+          <% @items.each do |item| %>
+          <div class="col-md-3">
+            <%= render 'shared/card', item: item, in_cart: false %>
+          </div>
+          <% end %>
+        </div>
+      </div>
+    </div>
 
   <% else %>
     <div class="container">
