--- a/app/assets/stylesheets/components/_itemized_reservations.scss
+++ b/app/assets/stylesheets/components/_itemized_reservations.scss
@@ -42,7 +42,7 @@
 }
 
 .btn-checkout{
-      border: 0px;
+    border: 0px;
     background-color: black;
     align-items: center;
     text-align: center;
@@ -60,7 +60,7 @@
 .shopping-cart-box h3{
   font-family: "Roboto" !important;
   font-size:25px;
-  margin-top: 15px;
+  margin-top: 10px;
   align-items: center;
   text-align: center;
   font-weight: bolder;
@@ -79,25 +79,21 @@
 
 .total-prices-container {
   border-top: 1px solid black;
-  h5{
+  h5 {
     font-family: "Monsterrat", sans-serif !important;
     font-size: 20px;
     padding-left: 20px;
   }
-   h6{
+   h6 {
     font-family: "Monsterrat", sans-serif !important;
     font-size: 20px;
     padding-left: 20px;
   }
-  h4{
-
+  h4 {
     font-family: "Monsterrat", sans-serif !important;
     font-size: 20px;
     border-top: 1px solid black;
-    padding: 20px;
-
-
-
+    padding-top: 10px;
   }
 }
 
