--- a/app/views/reservations/index.html.erb
+++ b/app/views/reservations/index.html.erb
@@ -5,12 +5,13 @@
       <!-- ITEMS BY SAME SELLERS -->
       <div class="row">
         <div class="col-xs-11 col-md-10 col-centered">
-          <h5>THE SUPPLIERS IN YOUR CART ALSO HAVE
+          <h5>YOUR SUPPLIERS ALSO HAVE
             <% if @same_supplier_items.size == 1 %>
-              THIS LONELY ITEM:
+              THIS LONELY ITEM
             <% else %>
-              THESE <%= @same_supplier_items.size %> ITEMS:
+              THESE <%= @same_supplier_items.size %> ITEMS
             <% end %>
+              IN STOCK:
           </h5>
           <br>
         </div>
@@ -57,7 +58,7 @@
       <!-- ITEMS BY SAME SELLERS -->
       <div class="row">
         <div class="col-xs-11 col-md-10 col-centered">
-          <h5>OTHERS THAT HAVE YOUR CART ITEMS IN THEIR CART ALSO HAVE
+          <h5>OTHERS WITH SIMILAR ITEMS IN THEIR CART ALSO HAVE
             <% if @other_reserved_items.size == 1 %>
               THIS LONE ITEM
             <% else %>
@@ -110,7 +111,7 @@
       <!-- OTHERS WHO BOUGHT WHAT YOU'VE BOUGHT ALSO BOUGHT -->
       <div class="row">
         <div class="col-xs-11 col-md-10 col-centered">
-          <h5>OTHERS WHO BOUGHT WHAT YOU'VE BOUGHT ALSO BOUGHT
+          <h5>OTHERS WHO SHARE A PURCHASE HISTORY WITH YOU ALSO BOUGHT
             <% if @others_purchased_items.size == 1 %>
               THIS SOLITARY ITEM:
             <% else %>
@@ -165,18 +166,17 @@
       <div class="col-xs-11 col-md-10 col-centered" style="
         margin-left: 0; display: flex;">
         <% @reservations.each do |reservation| %>
-          <div style="padding: 0 20px;">
+          <div style="padding: 0 20px; margin-bottom: 20px">
             <div>
               <div class="card" style="width: 233px;margin-left: 35px;background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url(<%= reservation.item.picture %>); margin-top: 10px; display: flex; margin-top: 10px; justify-content: left; align-items: flex-end; font-size: 20px; padding-left: 17px;">
                 <h4 style="font-size: 20px;"><%= reservation.item.name %></h4>
               </div>
             </div>
-            <div class="item-description" style="margin-left: 35px;">
+            <div class="item-description in-cart" style="margin-left: 35px;">
               <h6><%= reservation.item.user.name.capitalize %></h6>
               <h6>$ <%= reservation.item.price %> </h6>
-              <p><%= reservation.item.pickup_time.strftime("pickup before %I:%M%p") %>
-                <br><%= reservation.item.distance_location %>km</p>
-              <p style="color: black;"><%= link_to 'Delete out of cart', reservation_path(reservation), method: :delete %></p>
+              <p><%= reservation.item.pickup_time.strftime("pickup before %I:%M%p") %><br><%= reservation.item.distance_location %>km</p>
+              <p style="color: black;"><%= link_to 'Remove all from cart', reservation_path(reservation), method: :delete %></p>
             </div>
           </div>
         <% end %>
@@ -190,7 +190,7 @@
   <!-- SHOPPING CART -->
   <div class="shopping-cart-container" style="position: sticky;">
     <div class="shopping-cart-box">
-      <h3> MY BASKET</h3>
+      <h3> MY BASKET <% if current_user.reservations.size > 2 %><span style="font-size: 18px;">(<%= current_user.reservations.size %>)</span><% end %></h3>
 
       <!-- RESERVATIONS -->
       <%= render 'itemized_reservations' %>
