Refresh home page after adding to cart.

--- a/app/views/reservations/index.html.erb
+++ b/app/views/reservations/index.html.erb
@@ -27,7 +27,7 @@
                 <div class="item <%= 'active' if index == 0 %>">
                   <div class="carousel-col">
                     <div class="img-responsive">
-                      <%= render 'shared/card', item: item, in_cart: true %>
+                      <%= render 'reservations/card_in_cart', item: item, in_cart: true %>
                     </div>
                   </div>
                 </div>
@@ -80,7 +80,7 @@
                 <div class="item <%= 'active' if index == 0 %>">
                   <div class="carousel-col">
                     <div class="img-responsive">
-                      <%= render 'shared/card', item: item, in_cart: true %>
+                      <%= render 'reservations/card_in_cart', item: item, in_cart: true %>
                     </div>
                   </div>
                 </div>
@@ -132,7 +132,7 @@
                 <div class="item <%= 'active' if index == 0 %>">
                   <div class="carousel-col">
                     <div class="img-responsive">
-                      <%= render 'shared/card', item: item, in_cart: true %>
+                      <%= render 'reservations/card_in_cart', item: item, in_cart: true %>
                     </div>
                   </div>
                 </div>
