--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -54,10 +54,15 @@
   top: 10px;
   right: 10px;
   cursor: pointer;
-  background-color: transparent;
+  background-color: rgba(0, 0, 0, 0);
+  background: rgba(0, 0, 0, 0);
   font-size: 20px;
   z-index: 5;
   // color: #ddd !important;
+  .fa-plus {
+    background-color: rgba(0, 0, 0, 0);
+    background: rgba(0, 0, 0, 0);
+  }
   &:hover {
     color: #da552f !important;
   }
@@ -151,6 +156,7 @@ $quantity-btn-color: #95d7fc;
   vertical-align: center;
   margin-top: 5px;
   border-radius: 5px;
+  background-color: transparent;
   button{
     background-color: black;
     color: #fff;
