--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -5,7 +5,7 @@
         <% if current_user.reservations.size > 0 %>
           <%= current_user.reservations.size %>
         <% else %>
-          empty
+          <span style="font-size: 10px; margin-left: -10px;">empty</span>
         <% end %>
       </span>
     </h2>
