--- a/app/views/shared/_card_modal.html.erb
+++ b/app/views/shared/_card_modal.html.erb
@@ -81,8 +81,11 @@
                         </button>
                       </div>
 
+                        <% if item.reservations.find_by(user_id: current_user.id).present? %>
+                          <% @reservation = item.reservations.find_by(user_id: current_user.id) %>
+                        <% end %>
                       <!-- QUANTITY RESERVED -->
-                        <%= form_with model: @reservation, url: create_reservation_path, id: "add-to-cart-#{item.id}", local: true do |f| %>
+                        <%= form_with model: @reservation, id: "add-to-cart-#{item.id}", local: true do |f| %>
                         <% @value = "" %>
 
                         <%if item.reservations.where(user_id: current_user.id).any?%>
@@ -98,7 +101,7 @@
 
 
 
-                        <%= form_with model: @reservation, url: purchased_items_create_path, id: "one-click-#{item.id}", local: true do |f| %>
+                        <%= form_with model: @reservation, id: "one-click-#{item.id}", local: true do |f| %>
                           <%= f.hidden_field :quantity, value: @value, class: "form-control input-number circle"  %>
                           <%= f.hidden_field :item_id, value: item.id %>
                           <%= f.hidden_field :amount, value: (item.price * 1.05) %>
