working on user edit

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -171,7 +171,7 @@
                 <!-- CARD DETAILS -->
                 <div class="user-card-details">
                   <p><%= current_user.name %></p>
-                  <p><%= current_user.email %></p>
+                  <p><%= current_user.username %></p>
                 </div>
               </div>
 
@@ -189,7 +189,7 @@
                 <!-- CARD DETAILS -->
                 <div class="user-card-details">
                  <p><%= current_user.name %></p>
-                 <p><%= current_user.email %></p>
+                 <p>Role: <%= current_user.role %></p>
                </div>
              </div>
            </div>
