--- a/app/views/items/_form.html.erb
+++ b/app/views/items/_form.html.erb
@@ -6,35 +6,34 @@
 <%= f.error_notification %>
 
 <div class="final-day">
-  <%= f.input :name, placeholder: "Name", label: false, input_html: {value: item.name, class: "input-bar"} %>
+  <%= f.input :name, placeholder: "Name", label: false, input_html: { class: "input-bar"} %>
 </div>
 <div class="final-day">
-  <%= f.input :description, placeholder: "Description", label: false, input_html: {value: item.description, class: "input-bar"} %>
+  <%= f.input :description, placeholder: "Description", label: false, input_html: { class: "input-bar"} %>
 </div>
 <div class="final-day">
-  <%= f.input :address, placeholder: "Address", label: false, input_html: {value: item.address, class: "input-bar"} %>
+  <%= f.input :address, placeholder: "Address", label: false, input_html: { class: "input-bar"} %>
 </div>
 <div class="final-day">
-  <%= f.input :category, default: true, label: false, input_html: {value: item.category, class: "input-bar"}, collection: Item::CATEGORY, multiple: true %>
+  <%= f.input :category, default: true, label: false, input_html: { class: "input-bar"}, collection: Item::CATEGORY, multiple: true %>
 </div>
 <div class="final-day" id="types">
   <%= f.input :types, label:false do %>
 </div>
-<% raise %>
-<%= f.select :types, Type::TYPES, {}, {value: item.types, class: "select2", multiple: true} %>
+<%= f.select :types, Type::TYPES, {}, { class: "select2", multiple: true} %>
 <% end %>
 <div class="final-day">
-  <%= f.input :price, default: true, label: false, input_html: {min: "0", value: item.price,  class: "input-bar"} %>
+  <%= f.input :price, default: true, label: false, input_html: {min: "0",  class: "input-bar"} %>
 </div>
 <div class="final-day">
-  <%= f.input :quantity, label: false, input_html: {min: "0", value: item.quantity,  class: "input-bar"} %>
+  <%= f.input :quantity, label: false, input_html: {min: "1", class: "input-bar"} %>
 </div>
 <div class="final-day">
 
-  <%= f.input :pickup_time, label: false, as: :string, input_html: {value: item.pickup_time,  id: "start_date"} %>
+  <%= f.input :pickup_time, label: false, as: :string, input_html: { id: "start_date"} %>
 </div>
 <div class="final-day">
-  <%= f.input :expiration, label: false, as: :string, input_html: {value: item.expiration,  id: "end_date"} %>
+  <%= f.input :expiration, label: false, as: :string, input_html: { id: "end_date"} %>
 
 </div>
 <div class="final-day">
