--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,4 +1,4 @@
-<div class="banner" style=" background-image:linear-gradient(rgba(0,0,0,0.1), rgba(0,0,0,0.2)), url(<%= image_path("veg") %>);"></div>
+<div class="banner" style=" background-image:linear-gradient(rgba(0,0,0,0.1), rgba(0,0,0,0.2)), url(<%= image_path("veg.png") %>);"></div>
 <div class="container-fluid cfhome ">
   <div class="container home-one">
     <div class="why-us">
