--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -53,9 +53,8 @@
     </div>
     <div class="col-md-6">
       <ol style="padding: 24px;">
-        <li>Suscribe to our system.</li>
-        <li>Upload a restaurant.</li>
-        <li>Take a picture of the food that you don't want yo throw away and set time.</li>
+        <li>Suscribe to our system as a cafe or restaurant.</li>
+        <li>Upload a product.</li>
         <li>Consumer will pick it up as takeaway.</li>
       </ol>
     </div>
@@ -138,8 +137,8 @@
     </div>
     <div class="col-md-6">
       <ol style="padding: 24px;">
-        <li>Download the app and browse unsold food from restaurants, cafes and grocery stores.</li>
-        <li>Select & purchase food for ½ price - all within the app.</li>
+        <li>Browse unsold food from restaurants, cafes and grocery stores.</li>
+        <li>Select & purchase food for ½ price - all within the website.</li>
         <li>Pick it up & enjoy!.</li>
       </ol>
     </div>
