--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -25,7 +25,7 @@
           input_html: { value: @results.first.address, style:'box-shadow: none; outline: none;' } , placeholder: "Address" %>
         </div>
         <div class="filter">
-          <%= image_tag("equalizer.png", width:"16", height:"15", :class => "equalizer" )  %>
+          <%= image_tag("equalizer.jpg", width:"16", height:"15", :class => "equalizer" )  %>
           <a class="btn-filter" data-toggle="collapse" href="#collapseExample" role="button" aria-expanded="false" aria-controls="collapseExample">FILTER</a>
         </div>
       </div>
