--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,7 @@
   <%= stylesheet_pack_tag "map" %>
   <%= stylesheet_pack_tag "application" %>
   <%= stylesheet_link_tag 'application', media: 'all' %>
-  <%= favicon_link_tag asset_path('carrot2.png') %>
+  <%= favicon_link_tag asset_path('carrot.jpg') %>
 </head>
 <body>
   <%= render 'shared/navbar' %>
