changes to the home screen and trying to fix the sticky on index

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -55,6 +55,7 @@
       <ol style="padding: 24px;">
         <li>Suscribe to our system as a cafe or restaurant.</li>
         <li>Upload a product.</li>
+        <li>Receive a notification in your profile.</li>
         <li>Consumer will pick it up as takeaway.</li>
       </ol>
     </div>
@@ -139,7 +140,7 @@
       <ol style="padding: 24px;">
         <li>Browse unsold food from restaurants, cafes and grocery stores.</li>
         <li>Select & purchase food for ½ price - all within the website.</li>
-        <li>Pick it up & enjoy!.</li>
+        <li>Pick it up & enjoy!</li>
       </ol>
     </div>
   </div>
